Archive2/f9/dd4a48a20b7933/output
main.cpp: In function 'int main()':
main.cpp:71:58: error: no matching function for call to 'Base::Base(Final (&)())'
     void* base_as_pvoid = (void*)&static_cast<Base>(final);
                                                          ^
main.cpp:71:58: note: candidates are:
main.cpp:3:7: note: constexpr Base::Base()
 class Base {
       ^
main.cpp:3:7: note:   candidate expects 0 arguments, 1 provided
main.cpp:3:7: note: constexpr Base::Base(const Base&)
main.cpp:3:7: note:   no known conversion for argument 1 from 'Final()' to 'const Base&'
main.cpp:3:7: note: constexpr Base::Base(Base&&)
main.cpp:3:7: note:   no known conversion for argument 1 from 'Final()' to 'Base&&'
